fixed navbar layout issue

--- a/style.css
+++ b/style.css
@@ -157,5 +157,5 @@ text-align: center;
 background-color: #e4f9f5;
 }
 .navbar-light .navbar-nav .nav-link {
-  color: #66bfbf;
+  color: black;
 }
